tests/Checker/everything/errors/9b.vc
// extensive tests covered in coercion.vc

int main() {
    true && 1;
    return 0;
}
